--- a/hackathone/package.json
+++ b/hackathone/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "^3.72.1",
     "next": "14.2.20",
+    "next-sanity": "^9.8.46",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanity": "^3.72.1"
   },
   "devDependencies": {
     "@types/node": "^20",
