--- a/hackathone/package.json
+++ b/hackathone/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@sanity/client": "^6.27.2",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.20",
     "next-sanity": "^9.8.46",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.72.1"
+    "sanity": "^3.72.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
