--- a/hackathone/package.json
+++ b/hackathone/package.json
@@ -10,18 +10,24 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.27.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.474.0",
     "next": "14.2.20",
     "next-sanity": "^9.8.46",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.72.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
